fix search input css bleeding styles

--- a/src/client/features/tickets/uploadForm/form.less
+++ b/src/client/features/tickets/uploadForm/form.less
@@ -1,4 +1,4 @@
-form {
+.upload-form {
     margin: 0 auto;
     width: 50%;
     flex-direction: column;
@@ -12,7 +12,7 @@ form {
         font-weight: 600;
     }
     
-    section {
+    .input-group {
         display: flex;
         flex-direction: column;
         
